fix spacing on login button

--- a/app/assets/stylesheets/login_page.scss
+++ b/app/assets/stylesheets/login_page.scss
@@ -22,5 +22,8 @@ body {
   }
   #submit-button-container {
     text-align: center;
+    span {
+      line-height: 1.8em;
+    }
   }
 }
